--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 		<title>reveal.js - The HTML Presentation Framework</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Hadrian Semroud - Game Designer">
+		<meta name="author" content="Hadrian Semroud">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/Sky.css" id="theme">
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -48,12 +48,23 @@
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
+					<h2>It's me !</h2>
+                    <table>
+                        <tr>
+                            <td>
+                                <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
+                                    <img width="200" height="200" src="assets/pictures/hadrian-small.jpg" alt="Meny" align="left"  >
+                                </a>
 
+                            </td>
+                            <td>
+                                <p>
+                                    Hi and welcome on my portfolio. I'm a french junior Game Designer who like to make games. I'm willing to make every type of game !
+                                </p>
+
+                            </td>
+                        </tr>
+                    </table>
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 					</aside>
