some text and pictures !

--- a/index.html
+++ b/index.html
@@ -44,27 +44,17 @@
 			<div class="slides">
 				<section>
 					<h1>Hadrian Semroud</h1>
-					<h3>Portfolio this is my life</h3>
+					<h3>Game Design Portfolio</h3>
 				</section>
 
 				<section>
-					<h2>It's me !</h2>
-                    <table>
-                        <tr>
-                            <td>
-                                <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-                                    <img width="200" height="200" src="assets/pictures/hadrian-small.jpg" alt="Meny" align="left"  >
-                                </a>
-
-                            </td>
-                            <td>
-                                <p>
-                                    Hi and welcome on my portfolio. I'm a french junior Game Designer who like to make games. I'm willing to make every type of game !
-                                </p>
-
-                            </td>
-                        </tr>
-                    </table>
+					<h2>Let me introduce myself</h2>
+                        <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
+                            <img src="assets/pictures/hadrian-small.jpg" style="float: left; margin-left: 5px; margin-bottom: 5px; margin-top: 5px;">
+                        </a>
+                        <p>
+                            Hi and welcome on my portfolio. I'm a french junior Game Designer who like to make games. <br>I'm willing to make every type of game !
+                        </p>
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 					</aside>
