--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
 			if( window.location.search.match( /print-pdf/gi ) ) {
@@ -55,6 +58,9 @@
                         <p>
                             Hi and welcome on my portfolio. I'm a french junior Game Designer who like to make games. <br>I'm willing to make every type of game !
                         </p>
+                    <button type="button" class="btn btn-default btn-lg">
+                        <i class="glyphicon glyphicon-bell"></i> Star
+                    </button>
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 					</aside>
