--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
