--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 	<head>
 		<meta charset="utf-8">
@@ -22,7 +22,6 @@
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
@@ -51,23 +50,41 @@
 					<h3>Game Design Portfolio</h3>
 				</section>
 
+				<!-- Example of nested vertical slides -->
 				<section>
-					<h2>Let me introduce myself</h2>
+					<section>
+                        <h2>Let me introduce myself</h2>
                         <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
                             <img src="assets/pictures/hadrian-small.jpg" style="float: left; margin-left: 5px; margin-bottom: 5px; margin-top: 5px;">
                         </a>
                         <p>
                             Hi and welcome on my portfolio. I'm a french junior Game Designer who like to make games. <br>I'm willing to make every type of game !
                         </p>
-                    <button type="button" class="btn btn-default btn-lg">
-                        <i class="glyphicon glyphicon-bell"></i> Star
-                    </button>
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+                        <a href="index.html#/1/1" class="btn btn-default btn-lg" role="button">Contact</a>
+                        <a href="index.html#/1/2" class="btn btn-default btn-lg" role="button">CV</a>
+                        <aside class="notes">
+                            Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+                        </aside>
+					</section>
+					<section>
+						<h2>Contact</h2>
+						<p>Incoming</p>
+					</section>
+					<section>
+						<h2>Basement Level 2</h2>
+						<p>Cornify</p>
+						<a class="test" href="http://cornify.com">
+							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
+						</a>
+					</section>
+					<section>
+						<h2>Basement Level 3</h2>
+						<p>That's it, time to go back up.</p>
+						<a href="#/2" class="image">
+							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
+						</a>
+					</section>
 				</section>
-
-				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
 						<h2>Vertical Slides</h2>
