--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 						<p>Incoming</p>
 					</section>
 					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
+						<h2>My CV</h2>
+						<p>Click me !</p>
+						<a class="test" href="assets/pictures/CV_HadrianSemroud.pdf" target="_blank">
+							<img width="280" height="326" src="assets/pictures/iconCV.png" alt="CV">
 						</a>
 					</section>
 					<section>
