finalize 1 parts (CV contact and Pres)

--- a/index.html
+++ b/index.html
@@ -71,17 +71,10 @@
 						<p>Incoming</p>
 					</section>
 					<section>
-						<h2>My CV</h2>
+						<h2>Curriculum Vitae</h2>
 						<p>Click me !</p>
 						<a class="test" href="assets/pictures/CV_HadrianSemroud.pdf" target="_blank">
 							<img width="280" height="326" src="assets/pictures/iconCV.png" alt="CV">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
 						</a>
 					</section>
 				</section>
