add STR flash game !

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<section>
 					<section>
                         <h2>Let me introduce myself</h2>
-                        <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
+                        <a class="image">
                             <img src="assets/pictures/hadrian-small.jpg" style="float: left; margin-left: 5px; margin-bottom: 5px; margin-top: 5px;">
                         </a>
                         <p>
@@ -78,9 +78,16 @@
 						</a>
 					</section>
 				</section>
-				<section>
+                <section>
+                    <h2>My projects</h2>
+                    <p>
+                        The next slides will present all my projets. <br> If you need further informations on a
+                        particular project, please press down.
+                    </p>
+                </section>
+                <section>
 					<section>
-						<h2>Vertical Slides</h2>
+						<h2>SuperVival Turtle Runner</h2>
 						<p>
 							Slides can be nested inside of other slides,
 							try pressing <a href="#" class="navigate-down">down</a>.
@@ -90,8 +97,8 @@
 						</a>
 					</section>
 					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
+						<h2>Play the game !</h2>
+						<object width="700" height="400" data="assets/STR.swf"></object>
 					</section>
 					<section>
 						<h2>Basement Level 2</h2>
