--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Hadrian Semroud</h1>
+					<h1>Hadrian Semroud Tahar</h1>
+					<h2>His real name is Bibou</h2>
 					<h3>Game Design Portfolio</h3>
 				</section>
 
