add STR flash game full screen option

--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 						</a>
 					</section>
 					<section>
-						<h2>Play the game !</h2>
+						<h2>Play the game! WIP</h2>
 						<object width="700" height="400" data="assets/STR.swf"></object>
+                        <a href="assets/STR.swf" class="btn btn-primary btn-lg" role="button" target="_blank">Fullscreen here!</a>
 					</section>
 					<section>
 						<h2>Basement Level 2</h2>
